# cognitive-crm-architecture

./: README.md  main.py  pyproject.toml
src/: __init__.py
src/config/: __init__.py  providers.py  settings.py
src/core/: __init__.py  cognitive_framework.py  entities.py
src/layers/data_ingestion/: __init__.py  embeddings.py  event_schema.py  identity_resolution.py  ingestors.py
src/layers/intelligence/: __init__.py  memory.py  memory_langchain.py  rag.py  rag_langchain.py  reasoning.py  reasoning_langchain.py  schemas.py
src/layers/learning/: __init__.py  feedback.py  learning.py  signals.py
src/layers/orchestration/: __init__.py  agents.py  agents_langgraph.py  approval.py  playbooks.py  triggers.py
src/metrics/: __init__.py  alerts.py  calculator.py  dashboard.py
src/simulation/: __init__.py  entities.py  metrics.py  simulator.py
src/use_cases/: __init__.py  nba_recommendations.py  post_call_intelligence.py
